# pylogstash

./: .gitignore  pylogstash.py  setup.cfg  setup.py
tests/: test_basic.py
